backend --s3에서 이미지 파일 가져오기 (왜 인지는 모르지만 지피티가 해결 해 준 커밋)